--- a/cv_bin.ipynb
+++ b/cv_bin.ipynb
@@ -128,7 +128,7 @@
       "cell_type": "code",
       "source": [
         "model = Sequential()\n",
-        "model.add(Conv2D(32, (3, 3), input_shape=(150, 150, 3), actiation='relu'))\n",
+        "model.add(Conv2D(32, (3, 3), input_shape=(150, 150, 3), activation='relu'))\n",
         "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
         "\n",
         "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
